samples/_failures_safe/1761154231_d352b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96e51621.c: In function ‘main’:
./samples/SAFE/__tmp_96e51621.c:202:9: error: expected expression at end of input
  202 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_96e51621.c:202:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96e51621.c:202:9: error: expected declaration or statement at end of input
